# gtestSetup

./: README.md
gtestproj/: CMakeLists.txt
gtestproj/dummy/example/: CMakeLists.txt
gtestproj/dummy/example/Source/: CMakeLists.txt  example1.c  example1.h
gtestproj/dummy/example/test/: CMakeLists.txt
